# signaldesk-ai

./: .gitignore  README.md  pyproject.toml  startup.sh
resources/jobs/: daily_pipeline_job.yml
resources/notebooks/: build_briefing_context.py
scripts/: deploy_app_service.sh
src/: app.py  config.py  databricks_client.py  databricks_jobs_client.py  foundry_client.py
src/briefing/: chat.py  context_builder.py  generate_briefing.py  prompts.py
src/disruption/: signals.py
src/queries/: fx.py  macro.py  market.py  regime.py  top_movers.py
src/ui/: streamlit_app.py
tests/: __init__.py  briefing_test.py  context_test.py  gold_query_test.py  sql_test.py  test_context_builder.py  test_databricks_jobs_client.py  test_top_movers_query.py  testy_smoke.py
