[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "signaldesk-ai"
version = "0.1.0"
description = "SignalDesk AI market briefing app"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "databricks-sql-connector",
    "openai>=1.0.0",
    "python-dotenv",
    "streamlit",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
